Introduce PublicApi annotation and basic doclet to do class filtering based on annotation presence.